--- a/level-editor/src/com/jxl/planeshooter/views/LevelEditor.mxml
+++ b/level-editor/src/com/jxl/planeshooter/views/LevelEditor.mxml
@@ -2,7 +2,7 @@
 <s:Window xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 width="300" height="650" 
+		 width="560" height="650" 
 		 title="Level Editor"
 		 xmlns:levelviews="com.jxl.planeshooter.views.levelviews.*">
 	<fx:Declarations>
@@ -11,9 +11,11 @@
 	
 	<fx:Script>
 		<![CDATA[
-			import com.jxl.planeshooter.SaveLevelService;
 			import com.jxl.planeshooter.events.EventItemRendererEvent;
+			import com.jxl.planeshooter.events.OpenLevelServiceEvent;
 			import com.jxl.planeshooter.events.SaveLevelServiceEvent;
+			import com.jxl.planeshooter.services.OpenLevelService;
+			import com.jxl.planeshooter.services.SaveLevelService;
 			import com.jxl.planeshooter.vo.EnemyVO;
 			import com.jxl.planeshooter.vo.LevelVO;
 			import com.jxl.planeshooter.vo.MovieVO;
@@ -26,12 +28,18 @@
 			private var movieEditor:MovieEditor;
 			private var saveLevelService:SaveLevelService;
 			
+			
 			private function onEditMovie(event:EventItemRendererEvent):void
 			{
 				var win:MovieEditor = new MovieEditor();
 				win.open(true);
 				win.movie = event.movie;
 				win.move(nativeWindow.bounds.x + width, nativeWindow.bounds.y);
+			}
+			
+			private function onDeleteItem(event:EventItemRendererEvent):void
+			{
+				level.events.removeItemAt(level.events.getItemIndex(event.item));
 			}
 			
 			private function onNewEnemy():void
@@ -78,6 +86,14 @@
 				Debug.error("LevelEditor::onSaveError");
 			}
 			
+			
+			
+			private function onSortByTime():void
+			{
+				level.events.source.sortOn("when", Array.NUMERIC);
+				level.events.refresh();
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -88,10 +104,12 @@
 	<s:Button label="New Enemy" click="onNewEnemy()" />
 	<s:Button label="New Movie" click="onNewMovie()" />
 	<s:Button label="Save Level" click="onSaveLevel()" />
+	<s:Button label="Sort By Time" click="onSortByTime()" />
 	
 	<s:Scroller width="100%" height="100%">
 		<levelviews:EventDataGroup dataProvider="{level.events}"
-								   editMovie="onEditMovie(event)"/>
+								   editMovie="onEditMovie(event)"
+								   deleteItem="onDeleteItem(event)"/>
 	</s:Scroller>
 	
 	
