--- a/level-editor/src/com/jxl/planeshooter/views/levelviews/EventDataGroup.mxml
+++ b/level-editor/src/com/jxl/planeshooter/views/levelviews/EventDataGroup.mxml
@@ -8,6 +8,7 @@
 	<fx:Metadata>
 		[Event(name="editMovie", type="com.jxl.planeshooter.events.EventItemRendererEvent")]
 		[Event(name="deleteItem", type="com.jxl.planeshooter.events.EventItemRendererEvent")]
+		[Event(name="timeChanged", type="com.jxl.planeshooter.events.EventItemRendererEvent")]
 	</fx:Metadata>
 
 	
